--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12733,3 +12733,21 @@
   timeWait: 6 mins
   timeBuild: 4 mins
   timeTotal: 11 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-43
+  taskId: 62877420
+  timeCreate: Wed Jul 24 22:24:38 2024
+  timeStart: Wed Jul 24 22:25:32 2024
+  timeFinish: Wed Jul 24 22:34:25 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-9
+  taskId: 62877684
+  timeCreate: Wed Jul 24 22:39:36 2024
+  timeStart: Wed Jul 24 22:40:11 2024
+  timeFinish: Wed Jul 24 22:46:07 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 6 mins
