--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12877,3 +12877,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-48
+  taskId: 62927353
+  timeCreate: Fri Jul 26 22:31:31 2024
+  timeStart: Fri Jul 26 22:32:00 2024
+  timeFinish: Fri Jul 26 22:40:18 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-16
+  taskId: 62927568
+  timeCreate: Fri Jul 26 22:45:19 2024
+  timeStart: Fri Jul 26 22:45:35 2024
+  timeFinish: Fri Jul 26 22:49:05 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
