--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12913,3 +12913,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-50
+  taskId: 62938757
+  timeCreate: Sun Jul 28 22:23:52 2024
+  timeStart: Sun Jul 28 22:24:39 2024
+  timeFinish: Sun Jul 28 22:32:37 2024
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-18
+  taskId: 62938826
+  timeCreate: Sun Jul 28 22:37:36 2024
+  timeStart: Sun Jul 28 22:38:16 2024
+  timeFinish: Sun Jul 28 22:41:44 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
