--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12958,3 +12958,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.16-4
+  taskId: 62954384
+  timeCreate: Mon Jul 29 10:41:06 2024
+  timeStart: Mon Jul 29 10:41:44 2024
+  timeFinish: Mon Jul 29 11:35:39 2024
+  timeWait: 0 mins
+  timeBuild: 53 mins
+  timeTotal: 54 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-20
+  taskId: 62955898
+  timeCreate: Mon Jul 29 11:45:17 2024
+  timeStart: Mon Jul 29 11:53:54 2024
+  timeFinish: Mon Jul 29 11:58:07 2024
+  timeWait: 8 mins
+  timeBuild: 4 mins
+  timeTotal: 12 mins
