--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13030,3 +13030,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-54
+  taskId: 63054844
+  timeCreate: Thu Aug 1 22:24:52 2024
+  timeStart: Thu Aug 1 22:24:56 2024
+  timeFinish: Thu Aug 1 22:33:36 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-24
+  taskId: 63055061
+  timeCreate: Thu Aug 1 22:38:41 2024
+  timeStart: Thu Aug 1 22:39:22 2024
+  timeFinish: Thu Aug 1 22:42:53 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
