--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13102,3 +13102,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-57
+  taskId: 63089913
+  timeCreate: Sun Aug 4 22:23:15 2024
+  timeStart: Sun Aug 4 22:23:29 2024
+  timeFinish: Sun Aug 4 22:31:50 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-28
+  taskId: 63089973
+  timeCreate: Sun Aug 4 22:36:52 2024
+  timeStart: Sun Aug 4 22:37:07 2024
+  timeFinish: Sun Aug 4 22:41:12 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
