--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13165,12 +13165,39 @@
   timeWait: 12 mins
   timeBuild: 301 mins
   timeTotal: 313 mins
+- name: devspaces-code-rhel8
+  tag: 3.16-15
+  taskId: 63107723
+  timeCreate: Mon Aug 5 13:47:03 2024
+  timeStart: Mon Aug 5 13:48:20 2024
+  timeFinish: Mon Aug 5 18:42:20 2024
+  timeWait: 1 mins
+  timeBuild: 294 mins
+  timeTotal: 295 mins
 - name: devspaces-operator-bundle
   tag: 3.16-31
   taskId: 63112296
   timeCreate: Mon Aug 5 17:25:50 2024
   timeStart: Mon Aug 5 17:25:59 2024
   timeFinish: Mon Aug 5 17:30:13 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-58
+  taskId: 63112861
+  timeCreate: Mon Aug 5 18:27:24 2024
+  timeStart: Mon Aug 5 18:27:45 2024
+  timeFinish: Mon Aug 5 18:36:39 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-32
+  taskId: 63113144
+  timeCreate: Mon Aug 5 18:55:56 2024
+  timeStart: Mon Aug 5 18:56:03 2024
+  timeFinish: Mon Aug 5 19:00:14 2024
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
