--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -535,11 +535,11 @@
       },
       "3.16": {
         "CSV_VERSION": "3.16.0",
-        "CSV_VERSION_PREV": "3.14.0"
+        "CSV_VERSION_PREV": "3.15.0"
       },
       "3.x": {
         "CSV_VERSION": "3.16.0",
-        "CSV_VERSION_PREV": "3.14.0"
+        "CSV_VERSION_PREV": "3.15.0"
       }
     }
   },
@@ -547,13 +547,13 @@
     "Errata": {
       "3.14": "131099",
       "3.15": "133247",
-      "3.16": "n/a",
+      "3.16": "137110",
       "3.x": "n/a"
     },
     "Epic": {
       "3.14": "CRW-6294",
       "3.15": "CRW-6593",
-      "3.16": "n/a",
+      "3.16": "CRW-6868",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
