--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13309,3 +13309,12 @@
   timeWait: 40 mins
   timeBuild: 4 mins
   timeTotal: 44 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-39
+  taskId: 63193918
+  timeCreate: Thu Aug 8 01:32:14 2024
+  timeStart: Thu Aug 8 01:32:38 2024
+  timeFinish: Thu Aug 8 01:36:25 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
