--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13354,3 +13354,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.16-18
+  taskId: 63211939
+  timeCreate: Thu Aug 8 09:45:15 2024
+  timeStart: Thu Aug 8 09:45:36 2024
+  timeFinish: Thu Aug 8 10:14:24 2024
+  timeWait: 0 mins
+  timeBuild: 28 mins
+  timeTotal: 29 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-42
+  taskId: 63212801
+  timeCreate: Thu Aug 8 10:13:26 2024
+  timeStart: Thu Aug 8 10:22:04 2024
+  timeFinish: Thu Aug 8 10:26:14 2024
+  timeWait: 8 mins
+  timeBuild: 4 mins
+  timeTotal: 12 mins
