--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -9,9 +9,9 @@ components:
       memoryLimit: 8Gi
       cpuRequest: 100m
       cpuLimit: 2000m
-      volumeMounts:
-        - name: local
-          path: /home/user/.local/
+      # volumeMounts:
+      #   - name: local
+      #     path: /home/user/.local/
       env:
         - name: CONCURRENTLY_OPTS
           value: -m 1
@@ -20,9 +20,9 @@ components:
           exposure: internal
           protocol: https
           targetPort: 5432
-  - volume:
-      ephemeral: true
-    name: local
+  # - volume:
+  #     ephemeral: true
+  #   name: local
 commands:
   - id: podman-login
     exec:
