--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13552,3 +13552,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.16-9
+  taskId: 63484733
+  timeCreate: Tue Aug 20 08:58:17 2024
+  timeStart: Tue Aug 20 09:29:40 2024
+  timeFinish: Tue Aug 20 09:48:20 2024
+  timeWait: 31 mins
+  timeBuild: 18 mins
+  timeTotal: 50 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-49
+  taskId: 63485268
+  timeCreate: Tue Aug 20 09:54:57 2024
+  timeStart: Tue Aug 20 09:58:24 2024
+  timeFinish: Tue Aug 20 10:02:54 2024
+  timeWait: 3 mins
+  timeBuild: 4 mins
+  timeTotal: 7 mins
