--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13678,3 +13678,21 @@
   timeWait: 30 mins
   timeBuild: 4 mins
   timeTotal: 34 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-64
+  taskId: 63612566
+  timeCreate: Thu Aug 22 19:31:50 2024
+  timeStart: Thu Aug 22 20:32:40 2024
+  timeFinish: Thu Aug 22 20:42:33 2024
+  timeWait: 60 mins
+  timeBuild: 9 mins
+  timeTotal: 70 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-54
+  taskId: 63614236
+  timeCreate: Thu Aug 22 21:10:08 2024
+  timeStart: Thu Aug 22 21:15:54 2024
+  timeFinish: Thu Aug 22 21:19:51 2024
+  timeWait: 5 mins
+  timeBuild: 3 mins
+  timeTotal: 9 mins
